update msg